--- a/GD.FinishingSystem.WEB/Views/Account/UserList.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Account/UserList.cshtml
@@ -10,7 +10,7 @@
 <p>
     <a class="btn btn-sm btn-outline-light border-dark btn-dark" asp-action="Register"><i class="lni lni-circle-plus"></i> Register</a>
 </p>
-<table class="table table-hover">
+<table class="table table-sm table-hover">
     <thead>
         <tr>
             <th>
