--- a/GD.FinishingSystem.WEB/Views/RuloProcess/Index.cshtml
+++ b/GD.FinishingSystem.WEB/Views/RuloProcess/Index.cshtml
@@ -13,7 +13,7 @@
     {
         <p>
             <a asp-action="Create" asp-route-relruloid="@relRuloId" class="btn btn-sm btn-outline-light border-dark btn-dark">
-                <i class="lni lni-circle-plus"></i> Add New
+                <i class="lni lni-circle-plus"></i> Create New
             </a>
         </p>
     }
@@ -21,7 +21,7 @@
 }
 
 
-<table class="table table-hover table-responsive-md">
+<table class="table table-sm table-hover table-responsive-md">
     <thead>
         <tr>
             <th colspan="8">Rulo Process List</th>
