--- a/GD.FinishingSystem.WEB/Views/Machine/Delete.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Machine/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model GD.FinishingSystem.Entities.Machine
+﻿@model GD.FinishingSystem.Entities.ViewModels.VMMachine
 
 @{
     ViewData["Title"] = "Delete";
@@ -12,37 +12,42 @@
     <h4>Machine Information</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             <i class="lni lni-line-dashed"></i>
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MachineID)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ID)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DefinationProcessID)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DefinationProcessID)
-        </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.MachineCode)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.MachineCode)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.MachineName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.MachineName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.processName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.processName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.FloorName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.FloorName)
         </dd>
     </dl>
     
     <form asp-action="Delete">
-        @Html.HiddenFor(model=>model.MachineID)
+        @Html.HiddenFor(model=>model.ID)
         @Html.AntiForgeryToken()
-        @*<input type="submit" value="Delete" class="btn btn-sm btn-danger" />*@
         <button type="submit" class="btn btn-sm btn-danger"><i class="lni lni-circle-minus"></i> Delete</button> |
-        <a asp-action="Index" class="btn btn-sm btn-secondary"><i class="lni lni-chevron-left-circle"></i> Back to List</a>
+        <a asp-action="Index" asp-route-reldefinationprocessid="@Model.DefinationProcessID" class="btn btn-sm btn-secondary"><i class="lni lni-chevron-left-circle"></i> Back to List</a>
     </form>
 </div>
