--- a/GD.FinishingSystem.WEB/Views/Machine/Details.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Machine/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model GD.FinishingSystem.Entities.Machine
+﻿@model GD.FinishingSystem.Entities.ViewModels.VMMachine
 
 @{
     ViewData["Title"] = "Details";
@@ -11,33 +11,39 @@
     <h4>Machine Information</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MachineID)
+        <dt class="col-sm-2">
+            <i class="lni lni-line-dashed"></i>
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MachineID)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ID)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DefinationProcessID)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DefinationProcessID)
-        </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.MachineCode)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.MachineCode)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.MachineName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.MachineName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.processName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.processName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.FloorName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.FloorName)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" class="btn btn-sm btn-success" asp-route-machineid="@Model.MachineID"><i class="lni lni-slice"></i> Edit</a> |
-    <a asp-action="Index" class="btn btn-sm btn-secondary"><i class="lni lni-chevron-left-circle"></i> Back to List</a>
+    <a asp-action="Edit" class="btn btn-sm btn-success" asp-route-machineid="@Model.ID"><i class="lni lni-slice"></i> Edit</a> |
+    <a asp-action="Index" asp-route-reldefinationprocessid="@Model.DefinationProcessID" class="btn btn-sm btn-secondary"><i class="lni lni-chevron-left-circle"></i> Back to List</a>
 </div>
