--- a/GD.FinishingSystem.WEB/Views/Rulo/Delete.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model GD.FinishingSystem.Entities.Rulo
+﻿@model GD.FinishingSystem.Entities.ViewModels.VMRulo
 
 @{
     ViewData["Title"] = "Delete";
@@ -12,91 +12,108 @@
     <h4>Rulo information</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            <i class="lni-line-dashed"></i>
+        <dt class="col-sm-2">
+            <i class="lni lni-line-dashed"></i>
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.RuloID)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Lote)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Lote)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Beam)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Beam)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Loom)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Loom)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Piece)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Piece)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Style)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Style)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.StyleName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.StyleName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Width)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Width)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.EntranceLength)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.EntranceLength)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ExitLength)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ExitLength)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IsWaitingAnswerFromTest)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IsWaitingAnswerFromTest)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TestResultID)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.OriginID)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TestResultID)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.OriginID)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Observations)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Observations)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.TestCategoryCode)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TestCategoryCode)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.CanContinue)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CanContinue)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TestResultAuthorizer)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TestResultAuthorizer)
         </dd>
-       
+
     </dl>
     
     <form asp-action="Delete">
         @Html.HiddenFor(model => model.RuloID)
         @Html.AntiForgeryToken()
-        @*<input type="submit" value="Delete" class="btn btn-sm btn-danger" />*@
         <button type="submit" class="btn btn-sm btn-danger"><i class="lni lni-circle-minus"></i> Delete</button> |
         <a asp-action="Index" class="btn btn-sm btn-secondary"><i class="lni lni-chevron-left-circle"></i> Back to List</a>
     </form>
